# capchan

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
capchan/: __init__.py  cli.py  config.py  deck.py  diff.py  identity.py  ocr.py  pipeline.py  segment.py
docs/: 2026-06-26-capchan-as-multitool.md  writing-tdds.md
examples/: make_test_video.py
tests/: test_deckchan_domain.py  test_framechan_domain.py  test_subchan_cli.py  test_subchan_domain.py  test_subchan_recognizer_selection.py  test_subchan_scan.py  test_subtitle_writers.py  test_vision_recognizer.py
