[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "capchan"
version = "0.1.0"
description = "A video-processing multitool workspace for extracting text-bearing content from pixels."
requires-python = ">=3.10"
dependencies = [
    "deckchan",
    "subchan",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
framechan = { workspace = true }
deckchan = { workspace = true }
subchan = { workspace = true }

[tool.setuptools]
packages = []
